buildscript {
    ext {
        queryDslVersion = "5.0.0"
    }
}
    plugins {
        id 'org.springframework.boot' version '2.7.4'
        id 'io.spring.dependency-management' version '1.0.14.RELEASE'
        id 'java'
        id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
    }

    group = 'com.example'
    version = '0.0.1-SNAPSHOT'
    sourceCompatibility = '11'

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    repositories {
        mavenCentral()
    }

    dependencies {
        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
        implementation 'org.springframework.boot:spring-boot-starter-security'
        implementation 'org.springframework.boot:spring-boot-starter-validation'
        implementation 'org.springframework.boot:spring-boot-starter-web'
        //Websocket 추가
        implementation 'org.springframework.boot:spring-boot-starter-websocket'
        implementation 'org.webjars:stomp-websocket:2.3.3'
        implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
        implementation('nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect')
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testImplementation 'org.springframework.security:spring-security-test'
        compileOnly group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
        runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
        runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
        implementation "com.querydsl:querydsl-jpa:${queryDslVersion}"
        annotationProcessor "com.querydsl:querydsl-apt:${queryDslVersion}"
        // mysql
        runtimeOnly 'mysql:mysql-connector-java'
        runtimeOnly 'com.h2database:h2'
        //Swagger
        implementation 'io.springfox:springfox-boot-starter:3.0.0'
        implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '3.0.0'
        //aws s3 관련
        implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
        //쿼리 파라미터 로그 외부 라이브러리
        implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.8.1'
        //소셜로그인ssa
        implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
        //카카오 로그인
        implementation group: 'org.springframework.security', name: 'spring-security-oauth2-client', version: '5.6.3'
        //jasypt
        implementation group: 'com.github.ulisesbocchio', name: 'jasypt-spring-boot-starter', version: '3.0.4'
        //google 간편로그인
        //spring email
        implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '2.6.3'


    }
    tasks.named('test') {
        useJUnitPlatform()
    }
    def querydslDir = "$buildDir/generated/querydsl"
    querydsl {
        jpa = true
        querydslSourcesDir = querydslDir
    }
    sourceSets {
        main.java.srcDir querydslDir
    }
    configurations {
        querydsl.extendsFrom compileClasspath
    }
    compileQuerydsl {
        options.annotationProcessorPath = configurations.querydsl
    }